This file details the changelog of Qiling Framework.

------------------------------------
BREAK CHANGE
- ql.multithread can be only set during Qiling.__init__ now.
- ql.nprint and ql.dpring is depreciated. Please use logging directly instead.
- ql.filename is renamed to ql.argv.  

------------------------------------
[Version 1.2.1]: December [SOMETHING], 2020
- 

------------------------------------
[Version 1.2]: November 16th, 2020

- Demigod finally arrived, more information about [Demigod](https://groundx.io/demigod/)
- Linux: Implement futex bitset && Check library initialization
- Linux: vfork and fork syscall mappings
- execve() ql.argv and ql.env fix
- De-flattern with IDA plugin now supports ARM && ARM64 with experimental IDA mircocode API.
- Snapshot mechanism allows saving and restoring of OS and Loader information.
- Welcome Lazymio and Kabeor to the team
- Improve register handling (uppercase/lowercase) and add LR register support to arm64
- Fix ELF Memory mapping issues
- Fixed directory traversal bug


------------------------------------
[Version 1.1.3]: September 30th, 2020

- Added Doogie example and implement more interrupts
- Added ollvm de-flattern support for IDA plugin
- Fixed the popup menu doesn't show when the IDA plugin is put into plugins directory
- Added Json report extension
- Fix register mapping
- ql_syscall_writeev: Use ql.dprint instead of checking debug level
- Added support for fcntl64 F_SETFL and non-blocking sockets 
- drcov_exact: coverage collection at instruction granularity 
- Added UDP support


------------------------------------
[Version 1.1.2]: September 6th, 2020

- Qiling Debugger now comes with reverse debugging
- Added qltool into pypi packages
- Added more Windows API
- Add mapper support for standalone disks.
- More BIOS/DOS interrupts support shipped with fully emulated Petya as a mbr analysis example.


------------------------------------
[Version 1.1.1]: August 23th, 2020
