@@ -4,7 +4,8 @@ This file details the changelog of Qiling Framework.
 BREAK CHANGE
 - ql.multithread can be only set during Qiling.__init__ now.
 - ql.nprint and ql.dpring is depreciated. Please use logging directly instead.
-- ql.filename is renamed to ql.argv.  
+- ql.filename is renamed to ql.argv.
+- ql.output and ql.verbose now has slightly different meanings and can be adjusted runtime. See their docstring for details.
 
 ------------------------------------
 [Version 1.2.1]: December [SOMETHING], 2020
